Added FindOpenCV.cmake to automatically find OpenCV installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,13 @@
-project(Tracklib)
 cmake_minimum_required(VERSION 2.8)
+project(Tracklib)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+set(CMAKE_CXX_FLAGS "-g -Wall")
+
 aux_source_directory(. SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
