Added a dummy detector.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,12 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 set(CMAKE_CXX_FLAGS "-g -Wall")
 
 # Subdirectory list.
-set(SUB_DIRS tl_core tl_util)
+set(SUB_DIRS tl_core
+             tl_detectors
+             tl_util)
 
 # Include source files.
-set(SRC_LIST ${SRC_LIST} common.h)
+set(SRC_LIST ${SRC_LIST} common.h tracklib.h)
 aux_source_directory(. SRC_LIST)
 foreach(SUB_DIR ${SUB_DIRS})
   add_subdirectory(${SUB_DIR})
